// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests math-magician App test matches the snapshot 1`] = `<div />`;

exports[`tests math-magician App test renders the Items component 1`] = `
<button
  className="input-btn"
  onClick={[MockFunction]}
  type="button"
>
  8
</button>
`;

exports[`tests math-magician App test renders the Navbar component 1`] = `
<nav>
  <h1>
    Math Magicians
  </h1>
  <ul>
    <li>
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Home
      </a>
    </li>
    <li>
      <a
        class=""
        href="/calculator"
      >
        Calculator
      </a>
    </li>
    <li>
      <a
        class=""
        href="/quote"
      >
        Quote
      </a>
    </li>
  </ul>
</nav>
`;

exports[`tests math-magician App test renders the QuotePage component 1`] = `
<div>
  <nav>
    <h1>
      Math Magicians
    </h1>
    <ul>
      <li>
        <a
          aria-current="page"
          className="active"
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          className=""
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          className=""
          href="/quote"
          onClick={[Function]}
        >
          Quote
        </a>
      </li>
    </ul>
  </nav>
  <main>
    <div />
  </main>
</div>
`;

exports[`tests math-magician App test should render the component 1`] = `
<div
  className="calc-container"
>
  <div
    className="output"
  >
    0
  </div>
  <button
    className="input-btn top"
    onClick={[Function]}
    type="button"
  >
    AC
  </button>
  <button
    className="input-btn top"
    onClick={[Function]}
    type="button"
  >
    +/-
  </button>
  <button
    className="input-btn top"
    onClick={[Function]}
    type="button"
  >
    %
  </button>
  <button
    className="input-btn signs"
    onClick={[Function]}
    type="button"
  >
    ÷
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    7
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    8
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    9
  </button>
  <button
    className="input-btn signs"
    onClick={[Function]}
    type="button"
  >
    x
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    4
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    5
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    6
  </button>
  <button
    className="input-btn signs"
    onClick={[Function]}
    type="button"
  >
    -
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    1
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    2
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    3
  </button>
  <button
    className="input-btn signs"
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <button
    className="input-btn zero"
    onClick={[Function]}
    type="button"
  >
    0
  </button>
  <button
    className="input-btn"
    onClick={[Function]}
    type="button"
  >
    .
  </button>
  <button
    className="input-btn signs"
    onClick={[Function]}
    type="button"
  >
    =
  </button>
</div>
`;

exports[`tests math-magician App test should render the paragraph text 1`] = `
<p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum eu facilisis sed odio. Ullamcorper eget nulla facilisi etiam. Risus pretium quam vulputate dignissim suspendisse. Mi bibendum neque egestas congue quisque egestas diam in. Quis auctor elit sed vulputate mi sit amet mauris. Quam quisque id diam vel quam elementum. Vitae ultricies leo integer malesuada nunc. Nam at lectus urna duis. Integer feugiat scelerisque varius morbi. Tortor posuere ac ut consequat semper viverra nam libero. Pretium vulputate sapien nec sagittis aliquam. Varius vel pharetra vel turpis nunc eget lorem dolor sed. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra orci.Fames ac turpis egestas sed. Fames ac turpis egestas sed tempus. Sed vulputate odio ut enim blandit. Vitae et leo duis ut diam quam nulla. Ullamcorper sit amet risus nullam eget felis. Velit ut tortor pretium viverra suspendisse. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Ornare arcu odio ut sem nulla pharetra diam sit. Volutpat sed cras ornare arcu dui vivamus arcu. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat.
</p>
`;

exports[`tests math-magician App test should render the welcome message 1`] = `
<h2>
  Welcome to Math World!
</h2>
`;
